--- a/index.html
+++ b/index.html
@@ -1,2 +1,27 @@
-<meta name="MobileOptimized" content="320">
-<h1>基哥科技</h1>
+<html>
+  <head>
+	<title>基哥科技 djwdj.cn</title>
+	<meta name="MobileOptimized" content="320">
+<style>
+#t{background:#555;width:100%;padding:8px;text-align:center;font-size:180%;color:#ddd}
+body{margin-top:0px;}
+#l{background:#333;color:#ddd;margin:20px auto 60px;padding:45px 40px 35px ;width:128px;font-size:64px;border-radius:200px;line-height:1;text-align:center;}
+.c1{background:#ffddff;text-align:center;}
+
+</style>
+  </head>
+  <div id="t" style="position:fixed;top:0;left:0;">基哥科技</div>
+  <body>
+	<div id="t">基哥科技</div>
+
+	<div id="l">基哥<br>科技</div>
+	欢迎来到<a href="alipays://platformapi/startapp?saId=10000007&clientVersion=3.7.0.0718&qrcode=https%3A%2F%2Fqr.alipay.com%2FFKX07085RLJMHKMXFUXA5A%3F_s%3Dweb-other">基哥科技</a>
+	<div class="c1">
+	  基哥旗下软件：<br>
+	  my3T<br>
+	  OnePlus Pro<br>
+	  重启菜单<br>
+	</div>
+  </body>
+  <html>
+
